--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ development:
   encoding: utf8
   database: social_development
   username: root
-  password: 
+  password: root 
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
